@@ -19,141 +19,142 @@
 #define SWITCH_CHOWN 16
 #define SWITCH_CHUNKS 17
 #define SWITCH_CLEAR 18
-#define SWITCH_CMD 19
-#define SWITCH_COMMANDS 20
-#define SWITCH_CONN 21
-#define SWITCH_CONNECT 22
-#define SWITCH_CONNECTED 23
-#define SWITCH_CONTENTS 24
-#define SWITCH_COSTS 25
-#define SWITCH_COUNT 26
-#define SWITCH_CREATE 27
-#define SWITCH_DATABASE 28
-#define SWITCH_DB 29
-#define SWITCH_DEBUG 30
-#define SWITCH_DECOMPILE 31
-#define SWITCH_DEFAULTS 32
-#define SWITCH_DELETE 33
-#define SWITCH_DELIMIT 34
-#define SWITCH_DESCRIBE 35
-#define SWITCH_DESTROY 36
-#define SWITCH_DISABLE 37
-#define SWITCH_DOWN 38
-#define SWITCH_DSTATS 39
-#define SWITCH_EMIT 40
-#define SWITCH_ENABLE 41
-#define SWITCH_EQSPLIT 42
-#define SWITCH_ERR 43
-#define SWITCH_EXITS 44
-#define SWITCH_FILE 45
-#define SWITCH_FIRST 46
-#define SWITCH_FLAGS 47
-#define SWITCH_FOLDERS 48
-#define SWITCH_FORWARD 49
-#define SWITCH_FREESPACE 50
-#define SWITCH_FSTATS 51
-#define SWITCH_FULL 52
-#define SWITCH_FUNCTIONS 53
-#define SWITCH_FWD 54
-#define SWITCH_GAG 55
-#define SWITCH_GLOBALS 56
-#define SWITCH_HEADER 57
-#define SWITCH_HERE 58
-#define SWITCH_HIDE 59
-#define SWITCH_IGNORE 60
-#define SWITCH_ILIST 61
-#define SWITCH_INSIDE 62
-#define SWITCH_INVENTORY 63
-#define SWITCH_IPRINT 64
-#define SWITCH_JOIN 65
-#define SWITCH_LETTER 66
-#define SWITCH_LIST 67
-#define SWITCH_LOCKS 68
-#define SWITCH_LOWERCASE 69
-#define SWITCH_LSARGS 70
-#define SWITCH_ME 71
-#define SWITCH_MEMBERS 72
-#define SWITCH_MOD 73
-#define SWITCH_MOGRIFIER 74
-#define SWITCH_MORTAL 75
-#define SWITCH_MOTD 76
-#define SWITCH_MUTE 77
-#define SWITCH_NAME 78
-#define SWITCH_NO 79
-#define SWITCH_NOEVAL 80
-#define SWITCH_NOFLAGCOPY 81
-#define SWITCH_NOISY 82
-#define SWITCH_NOPARSE 83
-#define SWITCH_NOSIG 84
-#define SWITCH_NOSPACE 85
-#define SWITCH_NOTIFY 86
-#define SWITCH_NUKE 87
-#define SWITCH_OFF 88
-#define SWITCH_ON 89
-#define SWITCH_OUTSIDE 90
-#define SWITCH_OVERRIDE 91
-#define SWITCH_PAGING 92
-#define SWITCH_PANIC 93
-#define SWITCH_PARANOID 94
-#define SWITCH_PARENT 95
-#define SWITCH_PLAYERS 96
-#define SWITCH_PORT 97
-#define SWITCH_POWERS 98
-#define SWITCH_PREFIX 99
-#define SWITCH_PRESERVE 100
-#define SWITCH_PRINT 101
-#define SWITCH_PRIVS 102
-#define SWITCH_PURGE 103
-#define SWITCH_QUICK 104
-#define SWITCH_QUIET 105
-#define SWITCH_READ 106
-#define SWITCH_REBOOT 107
-#define SWITCH_RECALL 108
-#define SWITCH_REGEXP 109
-#define SWITCH_REGIONS 110
-#define SWITCH_REGISTER 111
-#define SWITCH_REMOVE 112
-#define SWITCH_RENAME 113
-#define SWITCH_RESTORE 114
-#define SWITCH_RESTRICT 115
-#define SWITCH_RETROACTIVE 116
-#define SWITCH_ROOM 117
-#define SWITCH_ROOMS 118
-#define SWITCH_RSARGS 119
-#define SWITCH_SAVE 120
-#define SWITCH_SEE 121
-#define SWITCH_SEEFLAG 122
-#define SWITCH_SELF 123
-#define SWITCH_SEND 124
-#define SWITCH_SET 125
-#define SWITCH_SILENT 126
-#define SWITCH_SKIPDEFAULTS 127
-#define SWITCH_SPEAK 128
-#define SWITCH_SPOOF 129
-#define SWITCH_STATS 130
-#define SWITCH_SUMMARY 131
-#define SWITCH_TABLES 132
-#define SWITCH_TAG 133
-#define SWITCH_TELEPORT 134
-#define SWITCH_TF 135
-#define SWITCH_THINGS 136
-#define SWITCH_TITLE 137
-#define SWITCH_TRACE 138
-#define SWITCH_TYPE 139
-#define SWITCH_UNCLEAR 140
-#define SWITCH_UNFOLDER 141
-#define SWITCH_UNGAG 142
-#define SWITCH_UNHIDE 143
-#define SWITCH_UNMUTE 144
-#define SWITCH_UNTAG 145
-#define SWITCH_UNTIL 146
-#define SWITCH_URGENT 147
-#define SWITCH_USEFLAG 148
-#define SWITCH_WHAT 149
-#define SWITCH_WHO 150
-#define SWITCH_WIPE 151
-#define SWITCH_WIZ 152
-#define SWITCH_WIZARD 153
-#define SWITCH_YES 154
-#define SWITCH_ZONE 155
+#define SWITCH_CLONE 19
+#define SWITCH_CMD 20
+#define SWITCH_COMMANDS 21
+#define SWITCH_CONN 22
+#define SWITCH_CONNECT 23
+#define SWITCH_CONNECTED 24
+#define SWITCH_CONTENTS 25
+#define SWITCH_COSTS 26
+#define SWITCH_COUNT 27
+#define SWITCH_CREATE 28
+#define SWITCH_DATABASE 29
+#define SWITCH_DB 30
+#define SWITCH_DEBUG 31
+#define SWITCH_DECOMPILE 32
+#define SWITCH_DEFAULTS 33
+#define SWITCH_DELETE 34
+#define SWITCH_DELIMIT 35
+#define SWITCH_DESCRIBE 36
+#define SWITCH_DESTROY 37
+#define SWITCH_DISABLE 38
+#define SWITCH_DOWN 39
+#define SWITCH_DSTATS 40
+#define SWITCH_EMIT 41
+#define SWITCH_ENABLE 42
+#define SWITCH_EQSPLIT 43
+#define SWITCH_ERR 44
+#define SWITCH_EXITS 45
+#define SWITCH_FILE 46
+#define SWITCH_FIRST 47
+#define SWITCH_FLAGS 48
+#define SWITCH_FOLDERS 49
+#define SWITCH_FORWARD 50
+#define SWITCH_FREESPACE 51
+#define SWITCH_FSTATS 52
+#define SWITCH_FULL 53
+#define SWITCH_FUNCTIONS 54
+#define SWITCH_FWD 55
+#define SWITCH_GAG 56
+#define SWITCH_GLOBALS 57
+#define SWITCH_HEADER 58
+#define SWITCH_HERE 59
+#define SWITCH_HIDE 60
+#define SWITCH_IGNORE 61
+#define SWITCH_ILIST 62
+#define SWITCH_INSIDE 63
+#define SWITCH_INVENTORY 64
+#define SWITCH_IPRINT 65
+#define SWITCH_JOIN 66
+#define SWITCH_LETTER 67
+#define SWITCH_LIST 68
+#define SWITCH_LOCKS 69
+#define SWITCH_LOWERCASE 70
+#define SWITCH_LSARGS 71
+#define SWITCH_ME 72
+#define SWITCH_MEMBERS 73
+#define SWITCH_MOD 74
+#define SWITCH_MOGRIFIER 75
+#define SWITCH_MORTAL 76
+#define SWITCH_MOTD 77
+#define SWITCH_MUTE 78
+#define SWITCH_NAME 79
+#define SWITCH_NO 80
+#define SWITCH_NOEVAL 81
+#define SWITCH_NOFLAGCOPY 82
+#define SWITCH_NOISY 83
+#define SWITCH_NOPARSE 84
+#define SWITCH_NOSIG 85
+#define SWITCH_NOSPACE 86
+#define SWITCH_NOTIFY 87
+#define SWITCH_NUKE 88
+#define SWITCH_OFF 89
+#define SWITCH_ON 90
+#define SWITCH_OUTSIDE 91
+#define SWITCH_OVERRIDE 92
+#define SWITCH_PAGING 93
+#define SWITCH_PANIC 94
+#define SWITCH_PARANOID 95
+#define SWITCH_PARENT 96
+#define SWITCH_PLAYERS 97
+#define SWITCH_PORT 98
+#define SWITCH_POWERS 99
+#define SWITCH_PREFIX 100
+#define SWITCH_PRESERVE 101
+#define SWITCH_PRINT 102
+#define SWITCH_PRIVS 103
+#define SWITCH_PURGE 104
+#define SWITCH_QUICK 105
+#define SWITCH_QUIET 106
+#define SWITCH_READ 107
+#define SWITCH_REBOOT 108
+#define SWITCH_RECALL 109
+#define SWITCH_REGEXP 110
+#define SWITCH_REGIONS 111
+#define SWITCH_REGISTER 112
+#define SWITCH_REMOVE 113
+#define SWITCH_RENAME 114
+#define SWITCH_RESTORE 115
+#define SWITCH_RESTRICT 116
+#define SWITCH_RETROACTIVE 117
+#define SWITCH_ROOM 118
+#define SWITCH_ROOMS 119
+#define SWITCH_RSARGS 120
+#define SWITCH_SAVE 121
+#define SWITCH_SEE 122
+#define SWITCH_SEEFLAG 123
+#define SWITCH_SELF 124
+#define SWITCH_SEND 125
+#define SWITCH_SET 126
+#define SWITCH_SILENT 127
+#define SWITCH_SKIPDEFAULTS 128
+#define SWITCH_SPEAK 129
+#define SWITCH_SPOOF 130
+#define SWITCH_STATS 131
+#define SWITCH_SUMMARY 132
+#define SWITCH_TABLES 133
+#define SWITCH_TAG 134
+#define SWITCH_TELEPORT 135
+#define SWITCH_TF 136
+#define SWITCH_THINGS 137
+#define SWITCH_TITLE 138
+#define SWITCH_TRACE 139
+#define SWITCH_TYPE 140
+#define SWITCH_UNCLEAR 141
+#define SWITCH_UNFOLDER 142
+#define SWITCH_UNGAG 143
+#define SWITCH_UNHIDE 144
+#define SWITCH_UNMUTE 145
+#define SWITCH_UNTAG 146
+#define SWITCH_UNTIL 147
+#define SWITCH_URGENT 148
+#define SWITCH_USEFLAG 149
+#define SWITCH_WHAT 150
+#define SWITCH_WHO 151
+#define SWITCH_WIPE 152
+#define SWITCH_WIZ 153
+#define SWITCH_WIZARD 154
+#define SWITCH_YES 155
+#define SWITCH_ZONE 156
 #endif                          /* SWITCHES_H */
