@@ -16,6 +16,7 @@ CHECK
 CHOWN
 CHUNKS
 CLEAR
+CLONE
 CMD
 COMMANDS
 CONN
