@@ -18,6 +18,7 @@ SWITCH_VALUE switch_list[] = {
   {"CHOWN", SWITCH_CHOWN},
   {"CHUNKS", SWITCH_CHUNKS},
   {"CLEAR", SWITCH_CLEAR},
+  {"CLONE", SWITCH_CLONE},
   {"CMD", SWITCH_CMD},
   {"COMMANDS", SWITCH_COMMANDS},
   {"CONN", SWITCH_CONN},
